...
                            <constraint firstItem="DkP-FT-Ezt" firstAttribute="top" secondItem="GhC-vt-6Ex" secondAttribute="top" id="gfa-Hm-sMa"/>
                            <constraint firstItem="DkP-FT-Ezt" firstAttribute="trailing" secondItem="GhC-vt-6Ex" secondAttribute="trailing" id="iXM-8n-ZCX"/>
                            <constraint firstItem="0Tu-d2-nP5" firstAttribute="top" secondItem="BlL-aV-CbP" secondAttribute="bottom" id="sx7-tS-I79"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="GhC-vt-6Ex"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="カレンダー" image="calendar" catalog="system" selectedImage="calendar" id="3W4-nP-xse"/>
                    <navigationItem key="navigationItem" title="復習カレンダー" id="wBE-sg-kyg" userLabel="カレンダー"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="calendar" destination="DkP-FT-Ezt" id="wch-3F-SAb"/>
                        <outlet property="subjectsLabel" destination="BlL-aV-CbP" id="PLD-Gl-t7k"/>
                        <outlet property="tableView" destination="0Tu-d2-nP5" id="l3c-rb-VEa"/>
...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="u6E-8D-w6D">
                                <rect key="frame" x="41.5" y="64" width="331" height="512"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FoR-jK-tzr">
                                        <rect key="frame" x="0.0" y="0.0" width="331" height="36"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yJH-gn-gPD">
                                        <rect key="frame" x="0.0" y="76" width="331" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" 勉強したこと ※必須" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ulL-qn-wC4">
                                <rect key="frame" x="62" y="108" width="290" height="40"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="ulL-qn-wC4" secondAttribute="height" multiplier="29:4" id="dvl-dG-6Bb"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yrJ-XI-fGY">
                                <rect key="frame" x="20" y="168" width="374" height="197"/>
...
                                <rect key="frame" x="62" y="752" width="290" height="40"/>
                                <color key="backgroundColor" red="1" green="0.1857388616" blue="0.57339501380000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="eb1-Yu-Axv" secondAttribute="height" multiplier="29:4" id="p2v-OJ-12j"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="登録"/>
                                <connections>
                                    <action selector="saveButtonTapped:" destination="L6Y-5J-Tzv" eventType="touchUpInside" id="5Af-8u-jyt"/>
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7a9-tS-7kx">
                                <rect key="frame" x="197" y="88" width="20" height="20"/>
...
