...
    @IBOutlet var datePicker: UIDatePicker!
    @IBOutlet var saveButton: UIButton!
    
    var dateString = ""
    var studyArrayForNotification = [Study]()
    var tomorrow:Date?
    var titlePlaceholder = "タイトル(必須)"
    var detailPlaceholder = "例) TOEIC単語1から20まで"
    
//    override func loadView() { //storyboardでレイアウト作ってるので使えない
//        print("loadView")
//    }
    
...
